# raspi_silence_alerts

./: Cargo.toml  LICENSE  README.md  silence_sense.json
.cargo/: cargo.toml
src/: alerts.rs  conf.rs  lib.rs  main.rs  send_mail.rs
