[package]
name = "raspi_silence_alerts"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
mail-builder = "0.4.3"
mail-send = "0.5.1"
rppal = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
